--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
       </article>
       <article class="map">
-        <img class="map__deer" src="/assets/figure/deer.png" alt="鹿" />
+        <img class="map__deer" src="assets/figure/deer.png" alt="鹿" />
         <div class="map__location"></div>
         <!-- <img src="/assets/picture/map.png" alt="旗津位置" /> -->
       </article>
