--- a/index.html
+++ b/index.html
@@ -5,13 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <!-- CSS only -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
-      crossorigin="anonymous"
-    />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
@@ -41,41 +34,17 @@
         </li>
       </ul>
     </nav>
-    <header
-      id="carouselExampleControls"
-      class="carousel slide"
-      data-bs-ride="carousel"
-    >
-      <ul class="carousel-inner">
-        <li class="carousel-item active">
-          <img
-            src="assets/image/cover.jpg"
-            class="d-block"
-            alt="旗津風車公園夕陽照"
-          />
-        </li>
-        <li class="carousel-item">
-          <img
-            src="assets/image/cover.jpg"
-            class="d-block"
-            alt="旗津風車公園夕陽照"
-          />
-        </li>
-        <li class="carousel-item">
-          <img
-            src="assets/image/cover.jpg"
-            class="d-block"
-            alt="旗津風車公園夕陽照"
-          />
-        </li>
-      </ul>
+    <header class="header">
+      <aside class="home">
+        <h1 class="home__title">Welcome to Cijin</h1>
+      </aside>
     </header>
     <main class="main">
       <article class="news">
         <h2 class="news__title">最新消息</h2>
-        <i class="news__icon"
+        <!-- <i class="news__icon"
           ><img src="assets/icon/1sea-snail.png" alt="貝殼"
-        /></i>
+        /></i> -->
         <ul class="news__content">
           <li>
             <sub class="news__date">2022.5.13</sub>
@@ -99,15 +68,15 @@
       <article class="event">
         <h2 class="event__title">展演活動</h2>
         <div class="event__container">
-          <button>
+          <!-- <button>
             <span class="material-symbols-outlined"> arrow_back_ios </span>
-          </button>
+          </button> -->
           <section class="event__item">
             <div></div>
             <!-- <img src="/assets/picture/event1.png" alt="" /> -->
             <aside class="event__info">
               <h3 class="event__name">旗津黑沙玩藝節</h3>
-              <a href="#">more </a>
+              <a href="#">more></a>
             </aside>
           </section>
           <section class="event__item">
@@ -115,7 +84,7 @@
             <!-- <img src="/assets/picture/event2.jpg" alt="" /> -->
             <aside class="event__info">
               <h3 class="event__name">循環綠活節</h3>
-              <a href="#">more</a>
+              <a href="#">more></a>
             </aside>
           </section>
           <section class="event__item">
@@ -123,12 +92,12 @@
             <!-- <img src="/assets/picture/event3.jpg" alt="" /> -->
             <aside class="event__info">
               <h3 class="event__name">旗津醉蝦趴</h3>
-              <a href="#">more</a>
+              <a href="#">more></a>
             </aside>
           </section>
-          <button>
+          <!-- <button>
             <span class="material-symbols-outlined"> arrow_forward_ios </span>
-          </button>
+          </button> -->
         </div>
       </article>
       <article class="map">
@@ -156,11 +125,5 @@
       </section>
       <p class="footer__copyright">©高雄旗津 All rights reserved.</p>
     </footer>
-    <!-- JavaScript Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
