--- a/index.html
+++ b/index.html
@@ -126,12 +126,8 @@
         <li class="footer__info__contact-e">Contact Us</li>
         <li class="footer__info__contact-c">聯絡我們</li>
         <li class="footer__info__address">振興里 高雄市旗津區</li>
-        <li class="footer__info__email">
-          <img src="assets/public/icon/email.png" alt="" />a390000@kcg.gov.tw
-        </li>
-        <li class="footer__info__phone">
-          <img src="assets/public/icon/phone.png" alt="" />07-7995678
-        </li>
+        <li class="footer__info__email">a390000@kcg.gov.tw</li>
+        <li class="footer__info__phone">07-7995678</li>
       </ul>
 
       <ul class="footer__visits">
