--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <a href="#" class="navbar__logo"
         ><img src="assets/public/logo/logo.png" alt="logo"
       /></a>
-      <ul class="navbar__link">
-        <li>
+      <ul class="navbar__link" id="navbar-link">
+        <li class="navbar__click">
           <a href="#">關於我們</a>
           <ul class="navbar__link-sub">
             <li>
@@ -26,10 +26,10 @@
             <li><a href="#">地理環境</a></li>
           </ul>
         </li>
-        <li><a href="#">最新消息</a></li>
-        <li><a href="#">展演活動</a></li>
-        <li><a href="#">遊玩資訊</a></li>
-        <li><a href="#">參觀資訊</a></li>
+        <li class="navbar__click"><a href="#">最新消息</a></li>
+        <li class="navbar__click"><a href="#">展演活動</a></li>
+        <li class="navbar__click"><a href="#">遊玩資訊</a></li>
+        <li class="navbar__click"><a href="#">參觀資訊</a></li>
       </ul>
       <ul class="navbar__outside-link">
         <li>
@@ -149,5 +149,6 @@
       </ul>
       <p class="footer__copyright">©高雄旗津 All rights reserved.</p>
     </footer>
+    <script src="assets/js/javascript.js"></script>
   </body>
 </html>
