--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <a href="#" class="navbar__logo"
         ><img src="assets/public/logo/logo.png" alt="logo"
       /></a>
-      <ul class="navbar__link" id="navbar-link">
-        <li class="navbar__click">
+      <ul class="navbar__link">
+        <li>
           <a href="#">關於我們</a>
           <ul class="navbar__link-sub">
             <li>
@@ -48,12 +48,10 @@
         </li>
       </ul>
     </nav>
-    <header class="header">
-      <aside class="home">
-        <h1 class="home__title">Welcome to Cijin</h1>
-      </aside>
+    <header class="header__home">
+      <h1 class="header__home__title">Welcome to Cijin</h1>
     </header>
-    <main class="main">
+    <main>
       <article class="news">
         <h2 class="news__title">最新消息</h2>
         <i class="news__icon"
@@ -83,26 +81,35 @@
       </article>
       <article class="event">
         <i class="event__icon"
-          ><img src="assets/public/icon/shell2 .png" alt=""
+          ><img src="assets/public/icon/shell2 .png" alt="貝殼"
         /></i>
         <h2 class="event__title">展演活動</h2>
         <ul class="event__container">
           <li class="event__item">
-            <img src="assets/public/picture/event/event-1.png" alt="" />
+            <img
+              src="assets/public/picture/event/event-1.png"
+              alt="旗津黑沙玩藝節"
+            />
             <aside class="event__info">
               <h3 class="event__name">旗津黑沙玩藝節</h3>
               <a href="#">more></a>
             </aside>
           </li>
           <li class="event__item">
-            <img src="assets/public/picture/event/event-2.png" alt="" />
+            <img
+              src="assets/public/picture/event/event-2.png"
+              alt="循環綠活節"
+            />
             <aside class="event__info">
               <h3 class="event__name">循環綠活節</h3>
               <a href="#">more></a>
             </aside>
           </li>
           <li class="event__item">
-            <img src="assets/public/picture/event/event-3.png" alt="" />
+            <img
+              src="assets/public/picture/event/event-3.png"
+              alt="旗津醉蝦趴"
+            />
             <aside class="event__info">
               <h3 class="event__name">旗津醉蝦趴</h3>
               <a href="#">more></a>
@@ -143,12 +150,15 @@
         <li class="footer__visits-c">造訪人次</li>
         <li class="footer__visits__update">更新時間 2022.5.21</li>
         <li>
-          <a href="#"> <img src="assets/public/icon/facebook.png" alt="" /></a>
-          <a href="#"><img src="assets/public/icon/instagram.png" alt="" /></a>
+          <a href="#">
+            <img src="assets/public/icon/facebook.png" alt="facebook-icon"
+          /></a>
+          <a href="#"
+            ><img src="assets/public/icon/instagram.png" alt="instagram-icon"
+          /></a>
         </li>
       </ul>
       <p class="footer__copyright">©高雄旗津 All rights reserved.</p>
     </footer>
-    <script src="assets/js/javascript.js"></script>
   </body>
 </html>
