--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <nav class="navbar">
-      <a href="#" class="navbar__logo"
+      <a href="index.html" class="navbar__logo"
         ><img src="assets/public/logo/logo.png" alt="logo"
       /></a>
       <ul class="navbar__link">
@@ -21,13 +21,13 @@
           <a href="#">關於我們</a>
           <ul class="navbar__link-sub">
             <li>
-              <a href="#">關於旗津</a>
+              <a href="Page/About-us.html">關於旗津</a>
             </li>
             <li><a href="#">地理環境</a></li>
           </ul>
         </li>
-        <li class="navbar__click"><a href="#">最新消息</a></li>
-        <li class="navbar__click"><a href="#">展演活動</a></li>
+        <li class="navbar__click"><a href="Page/News.html">最新消息</a></li>
+        <li class="navbar__click"><a href="Page/Events.html">展演活動</a></li>
         <li class="navbar__click"><a href="#">遊玩資訊</a></li>
         <li class="navbar__click"><a href="#">參觀資訊</a></li>
       </ul>
@@ -92,7 +92,7 @@
             />
             <aside class="event__info">
               <h3 class="event__name">旗津黑沙玩藝節</h3>
-              <a href="#">more></a>
+              <a href="Page/Event-3.html">more></a>
             </aside>
           </li>
           <li class="event__item">
@@ -102,7 +102,7 @@
             />
             <aside class="event__info">
               <h3 class="event__name">循環綠活節</h3>
-              <a href="#">more></a>
+              <a href="Page/Event-4.html">more></a>
             </aside>
           </li>
           <li class="event__item">
@@ -112,7 +112,7 @@
             />
             <aside class="event__info">
               <h3 class="event__name">旗津醉蝦趴</h3>
-              <a href="#">more></a>
+              <a href="Page/Event-5.html">more></a>
             </aside>
           </li>
         </ul>
