--- a/index.html
+++ b/index.html
@@ -4,26 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>旗津旅遊網</title>
+    <!-- Slick css -->
     <link
       rel="stylesheet"
       type="text/css"
       href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
     />
+    <!-- Slick-theme style -->
     <link
       rel="stylesheet"
       type="text/css"
       href="//cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css"
     />
+    <!-- Jquery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Slick js -->
     <script
       type="text/javascript"
       src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
+    <!-- Style -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <style>
       button::before {
-        background-color: gray !important;
+        background-color: #bebebe !important;
       }
       .header__home button {
         display: none !important;
@@ -31,10 +36,13 @@
     </style>
   </head>
   <body>
+    <!-- Navbar -->
     <nav class="navbar">
+      <!-- Logo -->
       <a href="index.html" class="navbar__logo"
         ><img src="assets/public/logo/logo.jpg" alt="logo"
       /></a>
+      <!-- Navbar Link -->
       <ul class="navbar__link">
         <li>
           <a href="Page/About-us.html">關於我們</a>
@@ -60,16 +68,19 @@
           </ul>
         </li>
       </ul>
+      <!-- Navbar Outside Link -->
       <ul class="navbar__outside-link">
         <li>
-          <a href="#"
+          <a href="https://www.facebook.com/sandartkh/" target="_blank"
             ><img
               src="assets/public/icon/blueicon/facebook.png"
               alt="facebook-icon"
           /></a>
         </li>
         <li>
-          <a href="#"
+          <a
+            href="https://www.instagram.com/kaohsiung.bravo/?igshid=1nr1unzhfvmdi&fbclid=IwAR0rkhDbtveGC2yuzrwpmkFqYhGZVLegoDEDFzKmBlDW02IgEeNZ3lrvS_k"
+            target="_blank"
             ><img
               src="assets/public/icon/blueicon/instagram.png"
               alt="instagram-icon"
@@ -77,6 +88,8 @@
         </li>
       </ul>
     </nav>
+
+    <!-- Header -->
     <header class="header__home">
       <div>
         <img src="assets/public/picture/header-cover/home.png" alt="" />
@@ -104,8 +117,12 @@
       </div>
     </header>
     <h1 class="header__home__title">Welcome to Cijin</h1>
+
+    <!-- Main -->
     <main>
+      <!--News  -->
       <article class="news">
+        <!-- News Main Title -->
         <a href="Page/News.html"><h2 class="news__title">最新消息</h2></a>
         <i class="news__icon"
           ><img src="assets/public/icon/shell-1.png" alt="貝殼"
@@ -113,6 +130,7 @@
         <i class="news__figure"
           ><img src="assets/public/figure/blackbear.png" alt="台灣黑熊"
         /></i>
+        <!-- News Content -->
         <ul class="news__content">
           <li>
             <sub class="news__date">2022.5.13</sub>
@@ -136,11 +154,13 @@
           </li>
         </ul>
       </article>
+      <!-- Events -->
       <article class="event">
         <i class="event__icon"
           ><img src="assets/public/icon/shell2 .png" alt="貝殼"
         /></i>
-        <h2 class="event__title">展演活動</h2>
+        <!-- Events Main Title -->
+        <a href="Page/Events.html"><h2 class="event__title">展演活動</h2></a>
         <ul class="event__container">
           <li class="event__item">
             <img
@@ -155,16 +175,6 @@
           <li class="event__item">
             <img
               src="assets/public/picture/event/event-2.png"
-              alt="循環綠活節"
-            />
-            <aside class="event__info">
-              <h3 class="event__name">循環綠活節</h3>
-              <a href="Page/Event-4.html">more></a>
-            </aside>
-          </li>
-          <li class="event__item">
-            <img
-              src="assets/public/picture/event/event-3.png"
               alt="旗津醉蝦趴"
             />
             <aside class="event__info">
@@ -174,26 +184,34 @@
           </li>
           <li class="event__item">
             <img
-              src="assets/public/picture/event/event-4.png"
-              alt="旗津黑沙玩藝節"
+              src="assets/public/picture/event/event-3.png"
+              alt="循環綠保節"
             />
             <aside class="event__info">
-              <h3 class="event__name">旗津黑沙玩藝節</h3>
-              <a href="Page/Event-3.html">more></a>
+              <h3 class="event__name">循環綠保節</h3>
+              <a href="Page/Event-4.html">more></a>
+            </aside>
+          </li>
+          <li class="event__item">
+            <img src="assets/public/picture/event/event-4.png" alt="fun旗津" />
+            <aside class="event__info">
+              <h3 class="event__name">fun旗津</h3>
+              <a href="Page/Event-1.html">more></a>
             </aside>
           </li>
           <li class="event__item">
             <img
               src="assets/public/picture/event/event-5.png"
-              alt="旗津黑沙玩藝節"
+              alt="攝影徵件活動"
             />
             <aside class="event__info">
-              <h3 class="event__name">旗津黑沙玩藝節</h3>
-              <a href="Page/Event-3.html">more></a>
+              <h3 class="event__name">攝影徵件活動</h3>
+              <a href="Page/Event-2.html">more></a>
             </aside>
           </li>
         </ul>
       </article>
+      <!-- Map -->
       <article class="map">
         <img class="map__deer" src="assets/public/figure/deer.png" alt="鹿" />
         <img
@@ -203,16 +221,21 @@
         />
       </article>
     </main>
+    <!-- back to Top Button -->
     <a class="back-top" href="#"
       ><img src="assets/public/button/back-top.png" alt=""
     /></a>
+
+    <!-- Footer -->
     <footer class="footer">
+      <!-- Footer Logo -->
       <section class="footer__logo">
         <a href="index.html"
           ><img src="assets/public/logo/logo.jpg" alt="logo"
         /></a>
         <h3>旗津 Chiji</h3>
       </section>
+      <!-- Footer Contact -->
       <ul class="footer__info">
         <li class="footer__info__contact-e">Contact Us</li>
         <li class="footer__info__contact-c">聯絡我們</li>
@@ -229,7 +252,7 @@
           >
         </li>
       </ul>
-
+      <!-- Footer Outside Link -->
       <ul class="footer__visits">
         <li class="footer__visits-e">Visits</li>
         <li class="footer__visits-c">造訪人次</li>
